kubernetes-networks/canary/web-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec:
  selector:
    app: web-app
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
